--- a/AIFFEL/LMS/Exploration_2.ipynb
+++ b/AIFFEL/LMS/Exploration_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "comic-handbook",
+   "id": "individual-winner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "flexible-conversation",
+   "id": "continuous-camping",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "equivalent-transsexual",
+   "id": "junior-communist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "simplified-employer",
+   "id": "sunrise-nurse",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "honey-moore",
+   "id": "illegal-financing",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "optimum-worse",
+   "id": "juvenile-thompson",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "rural-colorado",
+   "id": "southwest-induction",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "official-sculpture",
+   "id": "sound-review",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "presidential-patio",
+   "id": "regulation-custom",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fitting-prerequisite",
+   "id": "alive-office",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "posted-moscow",
+   "id": "architectural-investor",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "proof-prescription",
+   "id": "nominated-color",
    "metadata": {},
    "outputs": [
     {
@@ -587,14 +587,14 @@
     "print(classification_report(y_test, y_pred))\n",
     "\n",
     "# accuracy가 0.69로 Decision Tree와 Random Forest에 비해 상당히 낮게 측정되었다.\n",
-    "# 이는 곧 현재 dataset이 SVM으로는 구분하기 적합하지 않은 형태로 존재한다는 뜻이고 따라서 다른 classifier를\n",
-    "# 사용하는 것이 옳다고 생각한다."
+    "# 이는 곧 현재 dataset이 SVM으로는 구분하기 적합하지 않은 형태로 존재한다는 뜻이고 따라서\n",
+    "# 다른 classifier를 사용하는 것이 옳다고 생각한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "comfortable-current",
+   "id": "julian-event",
    "metadata": {},
    "outputs": [
     {
@@ -623,15 +623,15 @@
     "print('\\t\\t\\t[[ Model : SGD ]]')\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# accuracy가 0.42로 상당히 낮으며 percision과 recall 값들을 보면 절반 이상 구분하지 못하는 것을 알 수 있다.\n",
-    "# 그리고 class2의 경우에는 아예 측정이 되지않는 것으로 보아 SGD는 현재 dataset에 사용할 수 없는 classifier\n",
-    "# 라고 할 수 있다."
+    "# accuracy가 0.42로 상당히 낮으며 percision과 recall 값들을 보면 절반 이상 구분하지\n",
+    "# 못하는 것을 알 수 있다. 그리고 class2의 경우에는 아예 측정이 되지않는 것으로 보아\n",
+    "# SGD는 현재 dataset에 사용할 수 없는 classifier라고 할 수 있다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "sublime-sunday",
+   "id": "tested-framework",
    "metadata": {},
    "outputs": [
     {
@@ -674,14 +674,15 @@
     "print('\\t\\t  [[ Model : Logistic Regression ]]')\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# accuracy는 0.92로 나쁘지 않지만 손글씨 dataset과 마찬가지로 iteration 과 data scale에 대한 error가 출력된다.\n",
-    "# 따라서 Logistic Regression은 현재의 dataset에도 크게 적합하지 않은 방식이라고 할 수 있다."
+    "# accuracy는 0.92로 나쁘지 않지만 손글씨 dataset과 마찬가지로 iteration과\n",
+    "# data scale에 대한 error가 출력된다. 따라서 Logistic Regression은 현재의\n",
+    "# dataset에도 크게 적합하지 않은 방식이라고 할 수 있다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "caring-revelation",
+   "id": "manufactured-sterling",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "danish-belarus",
+   "id": "cellular-project",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "instant-greene",
+   "id": "suburban-alpha",
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +899,14 @@
     "print('\\t\\t    [[ Model : Random Forest ]]')\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# accuracy 0.98로 앞선 두 dataset보다 더 높은 수치를 보인다. 따라서 현재 dataset에 상당히 적합한\n",
-    "# 방식이라 할 수 있다."
+    "# accuracy 0.98로 앞선 두 dataset보다 더 높은 수치를 보인다.\n",
+    "# 따라서 현재 dataset에 상당히 적합한 방식이라 할 수 있다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "supposed-cleveland",
+   "id": "alleged-elements",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "planned-terry",
+   "id": "fifteen-remainder",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "positive-crowd",
+   "id": "eleven-terrace",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-apple",
+   "id": "legendary-edward",
    "metadata": {},
    "source": [
     "4. 총평(회고)\n",
